添加设备组功能
